--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons{
+    background-color: #fff;
+}
+
 .ui-menu-color-home{
     background-color: #6A5ACD;
 }
@@ -21,6 +25,7 @@
 .ui-menu-color-download{
     background-color: #0e4464;
 }
+
 /*-------------Special paddings/margins/text*/
 h1,
 h2,
@@ -43,6 +48,22 @@ h4 {
     display: inline-block;
 }
 
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
 
 /*-------------Heading*/
 
