--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home{
     background-color: #6A5ACD;
 }
@@ -208,4 +212,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*-------------3 reasons*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #6A5ACD;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
