--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,11 @@
 }
 
 .bg-color-personal-info {
-    background-color: #f4f4f4;
+    background-color:  #6A5ACD;
+}
+
+.bg-color-work-history {
+    background-color: #FF6F61;
 }
 
 .ui-menu-color-home{
@@ -62,12 +66,14 @@ h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
 
 /*-------------Heading*/
 
@@ -279,4 +285,50 @@ footer {
 
 .progress-section {
     margin: 40px 20px;
+}
+
+/*-------------Work history*/
+
+.history-heading {
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #000000;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
