--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     background-color: #FF6F61;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .ui-menu-color-home{
     background-color: #6A5ACD;
 }
@@ -339,4 +343,37 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*-------------Contact form*/
+
+.contact-heading {
+    font-family: "exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*-------------Media Quiries*/
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
